--- a/__site/index.html
+++ b/__site/index.html
@@ -55,7 +55,7 @@
           <li class="masthead__menu-item"><a href="/profile" >About Me</a></li>
           <li class="masthead__menu-item"><a href="/research" >Research</a></li>
           <li class="masthead__menu-item"><a href="/publications" >Publications</a></li>
-          <!--- <li class="masthead__menu-item"><a href="/notes" >Notes</a></li> -->
+          <li class="masthead__menu-item"><a href="/notes" >Notes</a></li>
           <!-- <li class="masthead__menu-item"><a href="/lecture" >Seminar/Lecture</a></li> -->
         </ul>
         <button class="greedy-nav__toggle hidden" type="button">
@@ -150,12 +150,13 @@
 
           <a href="https://scholar.google.co.jp/citations?user=p09KwG8AAAAJ&hl=en" rel="nofollow noopener noreferrer">
             <img src="/assets/google-scholar.png" alt="gscholar" style="width: 1vw; min-width: 10px;"> 
-            My page on Google Scholar.
+            Google Scholar.
           </a>
 
           <h>
             Email: s-iida[at]protein.osaka-u.ac.jp.
           </h>
+
 
           <a href="https://github.com/tlienart/Franklin.jl">
             Powered by 
