--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                 <div class="archive__item-excerpt">
 
                 </div>
-                <p><a href="/profile" class="btn btn--primary">Show details</a></p>
+                <!-- <p><a href="/profile" class="btn btn--primary">Show details</a></p> -->
+                <div class="archive__item-btn"><a href="/profile" class="btn btn--primary">Show details</a></div>
+
               </div>
             </div>
           </div>
@@ -95,7 +97,8 @@
                 <div class="archive__item-excerpt">
 
                 </div>
-                <p><a href="/research" class="btn btn--primary">Show details</a></p>
+                <!-- <p><a href="/research" class="btn btn--primary">Show details</a></p> -->
+                <div class="archive__item-btn"><a href="/research" class="btn btn--primary">Show details</a></div>
               </div>
             </div>
           </div>
@@ -112,7 +115,8 @@
                 <div class="archive__item-excerpt">
 
                 </div>
-                <p><a href="/publications" class="btn btn--primary">Show details</a></p>
+                <!-- <p><a href=ublications" class="btn btn--primary">Show details</a></p> -->
+                <div class="archive__item-btn"><a href=publications" class="btn btn--primary">Show details</a></div>
               </div>
             </div>
           </div>
