Publication page what was not linked was modified.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 </div>
                 <!-- <p><a href=ublications" class="btn btn--primary">Show details</a></p> -->
-                <div class="archive__item-btn"><a href=publications" class="btn btn--primary">Show details</a></div>
+                <div class="archive__item-btn"><a href=/publications class="btn btn--primary">Show details</a></div>
               </div>
             </div>
           </div>
